--- a/.github/workflows/master.yml
+++ b/.github/workflows/master.yml
@@ -286,7 +286,7 @@ jobs:
       - name: Install dependencies
         run: |
           source ./dev/install-common-deps.sh
-          pip install pyspark '.[evaluate]'
+          pip install '.[evaluate]' pyspark
       - uses: ./.github/actions/pipdeptree
       - name: Run tests
         run: |
