--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -37,11 +37,12 @@ jobs:
           name: Install Python dependencies
           command: |
             pip --version
-            pip install --progress-bar off -r requirements/doc-requirements.txt pytest pytest-cov plotly .[gateway]
+            pip install --progress-bar off -r requirements/doc-requirements.txt pytest pytest-cov plotly .[prometheus,gateway]
       - run:
           name: Build documentation
           working_directory: docs
           environment:
+            prometheus_multiproc_dir: /tmp/prometheus-exporter
             JAVA_HOME: /usr/lib/jvm/default-java
           command: |
             make rsthtml
