--- a/docs/Makefile
+++ b/docs/Makefile
@@ -68,13 +68,17 @@ rdocs:
 test-examples:
 	@pytest --no-cov .examples
 
+.PHONY: monitoring-docs
+monitoring-docs:
+	@python monitoring_docs.py
+
 .PHONY: gateway-api-docs
 gateway-api-docs:
 	@python gateway_api_docs.py
 
 # Builds only the RST-based documentation (i.e., everything but Java & R docs)
 .PHONY: rsthtml
-rsthtml: gateway-api-docs
+rsthtml: monitoring-docs gateway-api-docs
 	$(SPHINXBUILD) -b html $(ALLSPHINXOPTS) $(BUILDDIR)/html
 	@echo
 	@echo "Build finished. The HTML pages are in $(BUILDDIR)/html."
