--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -38,6 +38,7 @@ jobs:
           command: |
             pip --version
             pip install --progress-bar off -r requirements/doc-requirements.txt pytest pytest-cov plotly .[gateway]
+            pip install sphinx-copybutton sphinx-design pydata-sphinx-theme
       - run:
           name: Build documentation
           working_directory: docs
