--- a/.github/workflows/master.yml
+++ b/.github/workflows/master.yml
@@ -21,6 +21,7 @@ defaults:
     shell: bash --noprofile --norc -exo pipefail {0}
 
 env:
+  MLFLOW_HOME: /home/runner/work/mlflow/mlflow
   # Note miniconda is pre-installed in the virtual environments for GitHub Actions:
   # https://github.com/actions/virtual-environments/blob/main/images/linux/scripts/installers/miniconda.sh
   MLFLOW_CONDA_HOME: /usr/share/miniconda
@@ -251,7 +252,6 @@ jobs:
       - uses: ./.github/actions/pipdeptree
       - name: Run tests
         run: |
-          export MLFLOW_HOME=$(pwd)
           pytest tests/models
 
   # NOTE: numpy is pinned in this suite due to its heavy reliance on shap, which internally uses
@@ -277,7 +277,6 @@ jobs:
       - uses: ./.github/actions/pipdeptree
       - name: Run tests
         run: |
-          export MLFLOW_HOME=$(pwd)
           dev/pytest.sh tests/evaluate
 
   pyfunc:
@@ -300,7 +299,6 @@ jobs:
       - uses: ./.github/actions/pipdeptree
       - name: Run tests
         run: |
-          export MLFLOW_HOME=$(pwd)
           pytest --durations=30 tests/pyfunc --ignore tests/pyfunc/test_spark_connect.py
 
           # test_spark_connect.py fails if it's run with ohter tests, so run it separately.
