--- a/.github/ISSUE_TEMPLATE/bug_report_template.yaml
+++ b/.github/ISSUE_TEMPLATE/bug_report_template.yaml
@@ -18,6 +18,16 @@ body:
         - label: I have read and agree to submit bug reports in accordance with the [issues policy](https://www.github.com/mlflow/mlflow/blob/master/ISSUE_POLICY.md)
           required: true
   - type: dropdown
+    attributes:
+      label: Where did you encounter this bug?
+      options:
+        - Databricks
+        - Azure Machine Learning
+        - Local machine
+        - Other
+    validations:
+      required: true
+  - type: dropdown
     id: contribution
     attributes:
       label: Willingness to contribute
