--- a/.github/workflows/master.yml
+++ b/.github/workflows/master.yml
@@ -46,21 +46,21 @@ jobs:
       - uses: ./.github/actions/cache-pip
       - name: Install dependencies
         run: |
-          python -m venv ~/.venv
-          . ~/.venv/bin/activate
+          python -m venv .venv
+          source .venv/bin/activate
           source ./dev/install-common-deps.sh --ml
           pip install -r requirements/lint-requirements.txt
       - uses: ./.github/actions/pipdeptree
       - name: Install pre-commit hooks
         run: |
-          . ~/.venv/bin/activate
+          source .venv/bin/activate
           pre-commit install -t pre-commit -t prepare-commit-msg
       - name: Run pre-commit
         id: pre-commit
         env:
           IS_MAINTAINER: ${{ contains(fromJSON('["OWNER", "MEMBER", "COLLABORATOR"]'), github.event.pull_request.author_association )}}
         run: |
-          . ~/.venv/bin/activate
+          source .venv/bin/activate
           pre-commit run --all-files
 
   # python-skinny tests cover a subset of mlflow functionality
@@ -105,19 +105,19 @@ jobs:
       - uses: ./.github/actions/cache-pip
       - name: Install dependencies
         run: |
-          python -m venv ~/.venv
-          . ~/.venv/bin/activate
+          python -m venv .venv
+          source .venv/bin/activate
           source ./dev/install-common-deps.sh --ml
           # pyspark 3.5 is incompatible with delta 2.4
           pip install 'pyspark<3.5'
       - uses: ./.github/actions/pipdeptree
       - name: Import check
         run: |
-          . ~/.venv/bin/activate
+          source .venv/bin/activate
           python tests/check_mlflow_lazily_imports_ml_packages.py
       - name: Run tests
         run: |
-          . ~/.venv/bin/activate
+          source .venv/bin/activate
           source dev/setup-ssh.sh
           pytest --splits=${{ matrix.splits }} --group=${{ matrix.group }} --quiet --requires-ssh \
             --ignore-flavors --ignore=tests/examples --ignore=tests/recipes --ignore=tests/evaluate \
@@ -228,13 +228,13 @@ jobs:
       - uses: ./.github/actions/cache-pip
       - name: Install dependencies
         run: |
-          python -m venv ~/.venv
-          . ~/.venv/bin/activate
+          python -m venv .venv
+          source .venv/bin/activate
           source ./dev/install-common-deps.sh --ml
       - uses: ./.github/actions/pipdeptree
       - name: Run tests
         run: |
-          . ~/.venv/bin/activate
+          source .venv/bin/activate
           pytest \
             tests/utils/test_model_utils.py \
             tests/tracking/fluent/test_fluent_autolog.py \
@@ -362,8 +362,11 @@ jobs:
       - uses: ./.github/actions/setup-python
       - uses: ./.github/actions/setup-pyenv
       - uses: ./.github/actions/setup-java
+      - uses: ./.github/actions/cache-pip
       - name: Install python dependencies
         run: |
+          python -m venv .venv
+          source .venv/bin/activate
           pip install -r requirements/test-requirements.txt
           pip install --no-dependencies tests/resources/mlflow-test-plugin
           pip install -e .[extras]
@@ -388,6 +391,7 @@ jobs:
           # it's explicitly disposed.
           MLFLOW_SQLALCHEMYSTORE_POOLCLASS: "NullPool"
         run: |
+          source .venv/bin/activate
           # Set Hadoop environment variables required for testing Spark integrations on Windows
           export HADOOP_HOME=/tmp/winutils/hadoop-3.2.2
           export PATH=$PATH:$HADOOP_HOME/bin
