Remove run-python-tests.sh dependency in workflow
Signed-off-by: B-Step62 <31463517+B-Step62@users.noreply.github.com>

--- a/.github/workflows/requirements.yml
+++ b/.github/workflows/requirements.yml
@@ -79,4 +79,5 @@ jobs:
       - name: Run tests
         run: |
           source dev/setup-ssh.sh
-          ./dev/run-python-tests.sh
+          pytest tests --quiet --requires-ssh --ignore-flavors \
+            --ignore=tests/examples --ignore=tests/recipes --ignore=tests/evaluate
