Set fail-fast:false for splitted CI tests
By default, Github action stops all queued job execution once any of a job in matrix failed.
Setting `fail-fast` to `false` will prevent this and ensure all jobs are executed.

ref: https://docs.github.com/en/actions/using-workflows/workflow-syntax-for-github-actions#jobsjob_idstrategyfail-fast

Signed-off-by: B-Step62 <yuki.watanabe@databricks.com>

--- a/.github/workflows/master.yml
+++ b/.github/workflows/master.yml
@@ -89,6 +89,7 @@ jobs:
     runs-on: ubuntu-latest
     timeout-minutes: 120
     strategy:
+      fail-fast: false
       matrix:
         group: [1, 2]
         include:
@@ -227,6 +228,7 @@ jobs:
     runs-on: ubuntu-latest
     timeout-minutes: 120
     strategy:
+      fail-fast: false
       matrix:
         group: [1, 2]
         include:
@@ -279,6 +281,7 @@ jobs:
     runs-on: ubuntu-latest
     timeout-minutes: 120
     strategy:
+      fail-fast: false
       matrix:
         group: [1, 2]
         include:
@@ -329,6 +332,7 @@ jobs:
     runs-on: windows-latest
     timeout-minutes: 120
     strategy:
+      fail-fast: false
       matrix:
         group: [1, 2]
         include:
