--- a/.github/workflows/recipe.yml
+++ b/.github/workflows/recipe.yml
@@ -53,6 +53,7 @@ jobs:
     if: github.event_name != 'pull_request' || github.event.pull_request.draft == false
     runs-on: windows-latest
     strategy:
+      fail-fast: false
       matrix:
         group: [1, 2]
         include:
