--- a/.github/workflows/recipe.yml
+++ b/.github/workflows/recipe.yml
@@ -42,7 +42,9 @@ jobs:
       - name: Install dependencies
         run: |
           source ./dev/install-common-deps.sh
-          pip install pyspark
+          pip install -e .
+          # pyspark 3.5 is incompatible with delta 2.4
+          pip install 'pyspark<3.5'
       - name: Run tests
         run: |
           pytest tests/recipes
@@ -68,7 +70,8 @@ jobs:
           pip install -r requirements/test-requirements.txt
           pip install --no-dependencies tests/resources/mlflow-test-plugin
           pip install -e .
-          pip install pyspark
+          # pyspark 3.5 is incompatible with delta 2.4
+          pip install 'pyspark<3.5'
           # TODO: Importing datasets in a pandas UDF (created by mlflow.pyfunc.spark_udf) crashes
           # the Python worker. To avoid this, uninstall `datasets`. This is a temporary workaround.
           pip uninstall -y datasets
