--- a/.devcontainer/devcontainer.json
+++ b/.devcontainer/devcontainer.json
@@ -6,34 +6,34 @@
   "service": "mlflow",
   "postCreateCommand": ".devcontainer/postCreate.sh",
   "overrideCommand": true,
-  "settings": {
-    "terminal.integrated.defaultProfile.linux": "zsh",
-    "editor.rulers": [80, 100],
-    "editor.formatOnSave": true,
-    "python.defaultInterpreterPath": "~/miniconda/envs/mlflow-dev-env/bin/python",
-    // Disable automatic environment activation because `.zshrc` contains `conda activate mlflow-dev-env`.
-    "python.terminal.activateEnvironment": false,
-    "python.analysis.autoImportCompletions": false,
-    "python.linting.enabled": false,
-    "python.formatting.provider": "black",
-    "prettier.prettierPath": "/workspaces/mlflow/mlflow/server/js/node_modules/prettier",
-    "prettier.configPath": "/workspaces/mlflow/mlflow/server/js/.prettierrc.js"
-  },
-  "extensions": [
-    "charliermarsh.ruff",
-    "dbaeumer.vscode-eslint",
-    "eamodio.gitlens",
-    "esbenp.prettier-vscode",
-    "GitHub.copilot",
-    "GitHub.copilot-chat",
-    "GitHub.vscode-pull-request-github",
-    "ms-azuretools.vscode-docker",
-    "ms-python.black-formatter",
-    "ms-python.python",
-    "ms-toolsai.jupyter",
-    "oderwat.indent-rainbow",
-    "PKief.material-icon-theme",
-    "ritwickdey.LiveServer",
-    "shardulm94.trailing-spaces"
-  ]
+  "customizations": {
+    "vscode": {
+      "settings": {
+        "terminal.integrated.defaultProfile.linux": "zsh",
+        "editor.rulers": [80, 100],
+        "editor.formatOnSave": true,
+        "python.defaultInterpreterPath": "/usr/local/bin/python",
+        "python.analysis.autoImportCompletions": false,
+        "prettier.prettierPath": "/workspaces/mlflow/mlflow/server/js/node_modules/prettier",
+        "prettier.configPath": "/workspaces/mlflow/mlflow/server/js/.prettierrc.js"
+      },
+      "extensions": [
+        "charliermarsh.ruff",
+        "dbaeumer.vscode-eslint",
+        "eamodio.gitlens",
+        "esbenp.prettier-vscode",
+        "GitHub.copilot",
+        "GitHub.copilot-chat",
+        "GitHub.vscode-pull-request-github",
+        "ms-azuretools.vscode-docker",
+        "ms-python.black-formatter",
+        "ms-python.python",
+        "ms-toolsai.jupyter",
+        "oderwat.indent-rainbow",
+        "PKief.material-icon-theme",
+        "ritwickdey.LiveServer",
+        "shardulm94.trailing-spaces"
+      ]
+    }
+  }
 }
