--- a/pyproject.toml
+++ b/pyproject.toml
@@ -70,6 +70,7 @@ ignore = [
   "E741",  # ambiguous-variable-name
   "F811",  # redefined-while-unused
 ]
+extend-include = ["*.ipynb"]
 extend-exclude = [
   "setup.py",
   "docs",
