--- a/.pre-commit-config.yaml
+++ b/.pre-commit-config.yaml
@@ -55,3 +55,8 @@ repos:
         entry: 'grep "Signed-off-by:"'
         language: system
         stages: [prepare-commit-msg]
+
+      - id: mlflow-typo
+        name: mlflow-typo
+        entry: dev/mlflow-typo.sh
+        language: system
