--- a/tests/resources/dockerfile/Dockerfile_custom_scipy
+++ b/tests/resources/dockerfile/Dockerfile_custom_scipy
@@ -7,11 +7,12 @@ FROM quay.io/jupyter/scipy-notebook:latest
 
 WORKDIR /opt/mlflow
 
-
+# Install MLflow
+RUN pip install mlflow==2.12.1
 
 # Copy model to image and install dependencies
 COPY model_dir/model /opt/ml/model
-RUN python -c "from mlflow.models import container as C; C._install_pyfunc_deps('/opt/ml/model', install_mlflow=False, enable_mlserver=False, env_manager='None');"
+RUN python -c "from mlflow.models import container as C; C._install_pyfunc_deps('/opt/ml/model', install_mlflow=False, enable_mlserver=False, env_manager='local');"
 
 ENV MLFLOW_DISABLE_ENV_CREATION=True
 ENV ENABLE_MLSERVER=False
@@ -25,4 +26,4 @@ RUN chmod o+rwX /opt/mlflow/
 # clean up apt cache to reduce image size
 RUN rm -rf /var/lib/apt/lists/*
 
-ENTRYPOINT ["python", "-c", "from mlflow.models import container as C; C._serve('None')"]
+ENTRYPOINT ["python", "-c", "from mlflow.models import container as C; C._serve('local')"]
