--- a/pyproject.toml
+++ b/pyproject.toml
@@ -31,7 +31,7 @@ dependencies = [
   "cloudpickle<4",
   "docker<8,>=4.0.0",
   "entrypoints<1",
-  "fsspec>2021.09",
+  "fsspec<2025,>=2021.09",
   "gitpython<4,>=3.1.9",
   "graphene<4",
   "gunicorn<23; platform_system != 'Windows'",
