--- a/.github/workflows/autoformat.yml
+++ b/.github/workflows/autoformat.yml
@@ -41,7 +41,7 @@ jobs:
             const autoformat = require('./.github/workflows/autoformat.js');
             const { comment } = context.payload;
             const pullInfo = await autoformat.getPullInformation(context, github);
-            const isMaintainer = autoformat.isMlflowMaintainer(comment.author_association) && autoformat.isMlflowMaintainer(pullInfo.pr_author);
+            const isMaintainer = autoformat.isMlflowMaintainer(comment.author_association) && autoformat.isMlflowMaintainer(pullInfo.author_association);
             if (!isMaintainer) {
               core.setFailed("Only MLflow maintainers can trigger this workflow in their PRs.");
             }
