--- a/.github/workflows/protobuf319.yml
+++ b/.github/workflows/protobuf319.yml
@@ -7,6 +7,8 @@ on:
       - synchronize
       - reopened
       - ready_for_review
+    paths:
+      - 'mlflow/protos/**'
   push:
     branches:
       - master
