--- a/.github/workflows/legacy-protobuf.yml
+++ b/.github/workflows/legacy-protobuf.yml
@@ -46,6 +46,7 @@ jobs:
       fail-fast: false
       matrix:
         group: [1, 2]
+        protobuf_version: ["4.25.3", "3.20.3"]
         include:
           - splits: 2
     steps:
@@ -70,7 +71,7 @@ jobs:
           pip install torch transformers
           pip install -r requirements/test-requirements.txt
           # Test against protobuf < 5
-          pip install "protobuf<5"
+          pip install "protobuf==${{ matrix.protobuf_version }}"
       - uses: ./.github/actions/pipdeptree
       - name: Run tests
         run: |
