Make mlflow depend on mlflow-skinny
Signed-off-by: harupy <17039389+harupy@users.noreply.github.com>

--- a/.github/workflows/test-package-build.yml
+++ b/.github/workflows/test-package-build.yml
@@ -62,7 +62,7 @@ jobs:
         id: build-dist
         run: |
           if [ "${{ matrix.type }}" == "skinny" ]; then
-            ./dev/build.sh --skinny
+            ./dev/build.py --package-type skinny
           else
             ./dev/build.sh
           fi
